[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "distributed-api-testing-platform"
version = "0.1.0"
description = "Distributed API testing and monitoring platform: FastAPI control plane, Redis-queued worker pool, PostgreSQL system of record."
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "redis==8.0.1",
    "alembic==1.18.5",
    "uuid6>=2025.0.1",
    "pyjwt==2.13.0",
    "argon2-cffi==25.1.0",
    "email-validator==2.3.0",
    "python-multipart==0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]